--- a/COXINHA/index.html
+++ b/COXINHA/index.html
@@ -7,6 +7,9 @@
     <title>Coxinha rei delas</title>
 </head>
 <body>
-    
+    <img src="Img/FOTO Perfil.jpg" alt="Foto de perfil">
+    <p>Eu sou o ETERNO OSSADA</p>
+    <h1>Eu sou o mestre das bebidas</h1>
+    <p>Eu sou especialista em fazer bebidas, ja trabalhei com Rand Bartender, e ja fiz varios cursos e hoje estou muito famoso nas redes sociais.</p>
 </body>
 </html>
